@@ -1,3 +1,6 @@
+- Several alteration of scheduling, so as to
+  limit pending signals, <= threads in pool and <= tasks in pool.
+  
 - Added 'JoinFifo' and 'JoinCount' in standard library.
 
 - Started a bit of emacs mode.
